ATLAS-1113: Add backend tests.

--- a/frontend/src/app/pages/tth/statement/statement-dialog/statement.dialog.component.html
+++ b/frontend/src/app/pages/tth/statement/statement-dialog/statement.dialog.component.html
@@ -14,7 +14,7 @@
   <div class="d-flex flex-row col-12 mb-5">
     <div class="d-flex flex-column col-12">
       <form-comment
-        [formGroup]="data"
+        [formGroup]="form"
         controlName="comment"
         label="TTH.STATEMENT.DIALOG.COMMENT_LABEL"
         maxChars="280"
