ATLAS-1113: Small changes before PR.

--- a/frontend/src/app/pages/tth/statement/statement-dialog/statement.dialog.component.html
+++ b/frontend/src/app/pages/tth/statement/statement-dialog/statement.dialog.component.html
@@ -6,8 +6,7 @@
 <div class="dialog" data-cy="dialog">
   <h1 class="font-bold-4xl">{{ 'TTH.STATEMENT.DIALOG.TITLE' | translate }}</h1>
   <div>
-    <span> {{ 'TTH.STATEMENT.DIALOG.TEXT' | translate }}</span
-    >>
+    <span> {{ 'TTH.STATEMENT.DIALOG.TEXT' | translate }}</span>
   </div>
 
   <br />
