ATLAS-1113: Changes according to PR comments.

--- a/frontend/src/app/pages/tth/statement/statement-detail.component.html
+++ b/frontend/src/app/pages/tth/statement/statement-detail.component.html
@@ -15,9 +15,9 @@
         <div class="d-flex flex-column col-12">
           <br />
           <span class="font-bold-lg">
-            {{ (statement ? 'TTH.STATEMENT.COMMENT' : '') | translate }}
+            {{ 'TTH.STATEMENT.COMMENT' | translate }}
           </span>
-          <span>{{ statement ? statement.comment : '' }}</span>
+          <span>{{ statement.comment }}</span>
         </div>
       </div>
 
