--- a/frontend/src/app/pages/tth/overview-detail/tth-change-status-dialog/tth-change-status-dialog.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/tth-change-status-dialog/tth-change-status-dialog.component.html
@@ -10,7 +10,7 @@
       <br />
     </div>
     <span class="font-regular-lg message">{{
-      data.message | translate : { actualStatus: data.ths.statementStatus }
+      data.message | translate : { actualStatus: data.statementStatus }
     }}</span>
   </div>
   <div class="pt-2 pb-5 justification">
