ATLAS-1016: Initial fileupload component

--- a/frontend/src/app/pages/tth/statement/statement-detail.component.html
+++ b/frontend/src/app/pages/tth/statement/statement-detail.component.html
@@ -204,6 +204,9 @@
       </div>
 
       <div class="font-regular-sm mb-2">{{ 'TTH.STATEMENT.ATTACHMENT_INFO' | translate }}</div>
+      <atlas-file-upload></atlas-file-upload>
+
+      OLD:
       <atlas-button
         applicationType="LIDI"
         buttonDataCy="addPDF"
