ATLAS-1016: Finish validation

--- a/frontend/src/app/core/components/file-upload/file-upload.component.html
+++ b/frontend/src/app/core/components/file-upload/file-upload.component.html
@@ -1,7 +1,7 @@
 <div
   class="file-upload-container d-flex flex-column align-items-center"
-  atlas-drag-and-drop
-  (fileDropped)="onFileDropped($event)"
+  atlas-file-drop
+  (filesDropped)="onFilesDropped($event)"
   (click)="selectFilesFromSystem()"
 >
   <div class="file-upload-description">{{ 'COMMON.FILEUPLOAD.DROPZONE' | translate }}</div>
@@ -24,15 +24,24 @@
     (change)="onFileInputChanged($event)"
   />
   <ng-container *ngFor="let file of files">
-    <atlas-file [file]="file" [ngStyle]="{ width: '100%' }"></atlas-file>
+    <atlas-file
+      [file]="file"
+      [ngStyle]="{ width: '100%' }"
+      (fileDeleted)="fileDeleted($event)"
+    ></atlas-file>
   </ng-container>
 
   <div *ngIf="errorFiles" class="errors">
     <div *ngFor="let errorFile of errorFiles">
-      {{ errorFile.file.name }}
-      {{ 'COMMON.FILEUPLOAD.ERROR.TEXT_START' | translate }}
-      {{ 'COMMON.FILEUPLOAD.ERROR.' + errorFile.errorType | translate }}
-      {{ 'COMMON.FILEUPLOAD.ERROR.TEXT_END' | translate }}
+      {{
+        errorFile.errorMessage
+          | translate
+            : {
+                filename: errorFile.file.name,
+                maxFileCount: errorFile.maxFileCount,
+                maxsize: maxFileSize | fileSize
+              }
+      }}
     </div>
   </div>
 </div>
