ATLAS-1009: reset checkbox, fix table pagination

--- a/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
@@ -207,6 +207,7 @@
       (tableChanged)="getOverview($event)"
       *ngIf="!noTimetableHearingYearFound"
       [canEdit]="true"
+      [checkBoxSelection]="selectedCheckBox"
       [tableColumns]="tableColumns"
       [tableData]="timeTableHearingStatements"
       [totalCount]="totalCount$"
