ATLAS-1016: complete migration of statement fileupload

--- a/frontend/src/app/core/components/file-upload/file-upload.component.html
+++ b/frontend/src/app/core/components/file-upload/file-upload.component.html
@@ -23,7 +23,7 @@
     style="display: none"
     (change)="onFileInputChanged($event)"
   />
-  <ng-container *ngFor="let file of files">
+  <ng-container *ngFor="let file of uploadedFiles">
     <atlas-file
       [file]="file"
       [ngStyle]="{ width: '100%' }"
