ATLAS-1009: disable status change when no checkbox selected

--- a/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
@@ -190,6 +190,7 @@
           <atlas-select
             (selectChanged)="collectingStatusChangeAction($event)"
             [additionalLabelspace]="false"
+            [disabled]="selectedItems.length === 0"
             [options]="STATUS_OPTIONS"
             dataCy="collect-status-change-action-type"
             optionTranslateLabelPrefix="TTH.STATEMENT_STATUS."
