--- a/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
@@ -21,7 +21,7 @@
         >
         </atlas-select>
       </div>
-      <div class="d-flex flex-column col-3 pe-3 pb-3 mb-5">
+      <div class="d-flex flex-column col-3 pe-3 pb-2 mb-2">
         <atlas-select
           (selectChanged)="changeSelectedCantonFromDropdown($event)"
           [additionalLabelspace]="false"
@@ -48,11 +48,11 @@
         <atlas-spacer height="15px"></atlas-spacer>
         <atlas-button
           (buttonClicked)="downloadCsv()"
+          [canton]="cantonShort"
           applicationType="TIMETABLE_HEARING"
           buttonDataCy="download-csv"
           buttonText="TTH.BUTTON.DOWNLOAD_CSV"
           buttonType="cantonWritePermission"
-          [canton]="cantonShort"
         >
           <ng-template #rightIcon>
             <download-icon class="ps-2"></download-icon>
@@ -116,90 +116,6 @@
         </atlas-button>
       </div>
     </div>
-    <div *ngIf="!noTimetableHearingYearFound" class="d-flex flex-row col-12 mb-3">
-      <div class="d-flex flex-column col-6">
-        <div>
-          <span *ngIf="isHearingYearActive && isSwissCanton" class="font-bold-lg">
-            {{
-              'TTH.TABLE_RESULT_ACTUAL_HEARING_HEADING_PREFIX'
-                | translate : { totalCount: totalCount$ }
-            }}
-            {{ 'TTH.WHOLE_SWISS' | translate }}
-          </span>
-          <span *ngIf="isHearingYearActive && !isSwissCanton" class="font-bold-lg">
-            {{
-              'TTH.TABLE_RESULT_ACTUAL_HEARING_HEADING_PREFIX'
-                | translate : { totalCount: totalCount$ }
-            }}
-            {{ 'TTH.SWISS_CANTON' | translate }}
-            {{ 'TTH.CANTON.' + cantonShort.toUpperCase() | translate }}
-          </span>
-          <span *ngIf="!isHearingYearActive" class="font-bold-lg">{{
-            'TTH.TABLE_RESULT_HEADING'
-              | translate
-                : { totalCount: totalCount$, year: foundTimetableHearingYear.timetableYear }
-          }}</span>
-        </div>
-        <div *ngIf="showHearingDetail">
-          <span
-            >{{ this.foundTimetableHearingYear.hearingFrom | displayDate }}
-            {{ 'COMMON.TO' | translate }}
-            {{ this.foundTimetableHearingYear.hearingTo | displayDate }}</span
-          >
-        </div>
-      </div>
-      <div
-        *ngIf="isHearingYearActive && !statusChangeCollectingActionsEnabled"
-        class="d-flex flex-column col-2 left-position"
-      >
-        <atlas-select
-          (selectChanged)="collectingActions($event)"
-          *ngIf="showCollectingActionButton"
-          [additionalLabelspace]="false"
-          [options]="COLLECTING_ACTION_DROWPDOWN_OPTIONS"
-          dataCy="collect-action-type"
-          optionTranslateLabelPrefix="TTH.DROPDOWN.COLLECTING_ACTION.OPTION."
-          placeHolderLabel="TTH.DROPDOWN.COLLECTING_ACTION.PLACEHOLDER"
-        >
-          <ng-template #matOptionPrefix let-action="option">
-            <img
-              alt="{{ action }}"
-              class="pe-2"
-              height="24"
-              src="assets/images/collecting_action/{{ action.toUpperCase() }}.svg"
-              width="24"
-            />
-          </ng-template>
-        </atlas-select>
-      </div>
-      <div *ngIf="statusChangeCollectingActionsEnabled" class="d-flex flex-row col-5 left-position">
-        <div class="d-flex flex-column col-6">
-          <atlas-button
-            (buttonClicked)="cancelCollectiongAction()"
-            applicationType="LIDI"
-            buttonDataCy="cancel-collecting-action"
-            buttonText="TTH.BUTTON.CANCEL_COLLECTING_ACTION"
-            buttonType="defaultPrimary"
-          >
-            <ng-template #rightIcon>
-              <i class="bi bi-x-lg"></i>
-            </ng-template>
-          </atlas-button>
-        </div>
-        <div class="d-flex flex-column col-6 mt-2">
-          <atlas-select
-            (selectChanged)="collectingStatusChangeAction($event)"
-            [additionalLabelspace]="false"
-            [disabled]="selectedItems.length === 0"
-            [options]="STATUS_OPTIONS"
-            dataCy="collect-status-change-action-type"
-            optionTranslateLabelPrefix="TTH.STATEMENT_STATUS."
-            placeHolderLabel="TTH.DROPDOWN.COLLECTING_STATUS_CHANGE_ACTION.PLACEHOLDER"
-          >
-          </atlas-select>
-        </div>
-      </div>
-    </div>
 
     <app-table
       (changeDropdownEvent)="changeSelectedStatus($event)"
@@ -211,10 +127,98 @@
       [checkBoxSelection]="selectedCheckBox"
       [tableColumns]="tableColumns"
       [tableData]="timeTableHearingStatements"
-      [totalCount]="totalCount$"
       [tableFilterConfig]="TABLE_FILTER_CONFIG"
+      [totalCount]="totalCount$"
       data-cy="ttfn"
-    ></app-table>
+    >
+      <div *ngIf="!noTimetableHearingYearFound" class="d-flex flex-row col-12 mb-3 mt-5">
+        <div class="d-flex flex-column col-6 pt-2">
+          <div>
+            <span *ngIf="isHearingYearActive && isSwissCanton" class="font-bold-lg">
+              {{
+                'TTH.TABLE_RESULT_ACTUAL_HEARING_HEADING_PREFIX'
+                  | translate : { totalCount: totalCount$ }
+              }}
+              {{ 'TTH.WHOLE_SWISS' | translate }}
+            </span>
+            <span *ngIf="isHearingYearActive && !isSwissCanton" class="font-bold-lg">
+              {{
+                'TTH.TABLE_RESULT_ACTUAL_HEARING_HEADING_PREFIX'
+                  | translate : { totalCount: totalCount$ }
+              }}
+              {{ 'TTH.SWISS_CANTON' | translate }}
+              {{ 'TTH.CANTON.' + cantonShort.toUpperCase() | translate }}
+            </span>
+            <span *ngIf="!isHearingYearActive" class="font-bold-lg">{{
+              'TTH.TABLE_RESULT_HEADING'
+                | translate
+                  : { totalCount: totalCount$, year: foundTimetableHearingYear.timetableYear }
+            }}</span>
+          </div>
+          <div *ngIf="showHearingDetail">
+            <span
+              >{{ this.foundTimetableHearingYear.hearingFrom | displayDate }}
+              {{ 'COMMON.TO' | translate }}
+              {{ this.foundTimetableHearingYear.hearingTo | displayDate }}</span
+            >
+          </div>
+        </div>
+        <div
+          *ngIf="isHearingYearActive && !statusChangeCollectingActionsEnabled"
+          class="d-flex flex-column col-2 left-position"
+        >
+          <atlas-select
+            (selectChanged)="collectingActions($event)"
+            *ngIf="showCollectingActionButton"
+            [additionalLabelspace]="false"
+            [options]="COLLECTING_ACTION_DROWPDOWN_OPTIONS"
+            dataCy="collect-action-type"
+            optionTranslateLabelPrefix="TTH.DROPDOWN.COLLECTING_ACTION.OPTION."
+            placeHolderLabel="TTH.DROPDOWN.COLLECTING_ACTION.PLACEHOLDER"
+          >
+            <ng-template #matOptionPrefix let-action="option">
+              <img
+                alt="{{ action }}"
+                class="pe-2"
+                height="24"
+                src="assets/images/collecting_action/{{ action.toUpperCase() }}.svg"
+                width="24"
+              />
+            </ng-template>
+          </atlas-select>
+        </div>
+        <div
+          *ngIf="statusChangeCollectingActionsEnabled"
+          class="d-flex flex-row col-5 left-position"
+        >
+          <div class="d-flex flex-column col-6">
+            <atlas-button
+              (buttonClicked)="cancelCollectiongAction()"
+              applicationType="LIDI"
+              buttonDataCy="cancel-collecting-action"
+              buttonText="TTH.BUTTON.CANCEL_COLLECTING_ACTION"
+              buttonType="defaultPrimary"
+            >
+              <ng-template #rightIcon>
+                <i class="bi bi-x-lg"></i>
+              </ng-template>
+            </atlas-button>
+          </div>
+          <div class="d-flex flex-column col-6 mt-2">
+            <atlas-select
+              (selectChanged)="collectingStatusChangeAction($event)"
+              [additionalLabelspace]="false"
+              [disabled]="selectedItems.length === 0"
+              [options]="STATUS_OPTIONS"
+              dataCy="collect-status-change-action-type"
+              optionTranslateLabelPrefix="TTH.STATEMENT_STATUS."
+              placeHolderLabel="TTH.DROPDOWN.COLLECTING_STATUS_CHANGE_ACTION.PLACEHOLDER"
+            >
+            </atlas-select>
+          </div>
+        </div>
+      </div>
+    </app-table>
     <router-outlet></router-outlet>
   </div>
 </div>
