--- a/frontend/src/app/core/components/file-upload/file/file.component.html
+++ b/frontend/src/app/core/components/file-upload/file/file.component.html
@@ -6,6 +6,6 @@
     <div class="text-align-end">{{ file.size | fileSize }}</div>
   </div>
   <div class="d-flex flex-column col-1">
-    <i class="bi bi-trash" (click)="onDelete(); $event.stopPropagation()"></i>
+    <i *ngIf="!disabled" class="bi bi-trash" (click)="onDelete(); $event.stopPropagation()"></i>
   </div>
 </div>
