ATLAS-1016: File Download and name restriction

--- a/frontend/src/app/core/components/file-upload/file-upload.component.html
+++ b/frontend/src/app/core/components/file-upload/file-upload.component.html
@@ -27,6 +27,7 @@
     <atlas-file
       [file]="file"
       [ngStyle]="{ width: '100%' }"
+      [deleteEnabled]="true"
       (fileDeleted)="fileDeleted($event)"
     ></atlas-file>
   </ng-container>
