--- a/frontend/src/app/core/components/file-upload/file/file.component.html
+++ b/frontend/src/app/core/components/file-upload/file/file.component.html
@@ -5,7 +5,12 @@
   <div class="d-flex flex-column col-3">
     <div class="text-align-end">{{ file.size | fileSize }}</div>
   </div>
-  <div class="d-flex flex-column col-1">
-    <i *ngIf="!disabled" class="bi bi-trash" (click)="onDelete(); $event.stopPropagation()"></i>
+  <div class="d-flex flex-row col-1">
+    <i *ngIf="deleteEnabled" class="bi bi-trash" (click)="onDelete(); $event.stopPropagation()"></i>
+    <i
+      *ngIf="downloadEnabled"
+      class="bi bi-download"
+      (click)="download(); $event.stopPropagation()"
+    ></i>
   </div>
 </div>
