ATLAS-1016: style statement detail

--- a/frontend/src/app/core/components/file-upload/file/file.component.html
+++ b/frontend/src/app/core/components/file-upload/file/file.component.html
@@ -1,4 +1,4 @@
-<div class="file-container d-flex flex-row col-12 p-2 m-1" (click)="$event.stopPropagation()">
+<div class="file-container d-flex flex-row col-12 p-2 mb-1 mt-1" (click)="$event.stopPropagation()">
   <div class="d-flex flex-column col-8">
     <div class="text-truncate" [title]="file.name">{{ file.name }}</div>
   </div>
