ATLAS-1013: finished translations

--- a/frontend/src/app/pages/tth/statement/statement-detail.component.html
+++ b/frontend/src/app/pages/tth/statement/statement-detail.component.html
@@ -295,7 +295,7 @@
   </atlas-button>
   <atlas-button
     (click)="toggleEdit()"
-    *ngIf="!isHearingStatusArchived && !form.enabled"
+    *ngIf="!isHearingStatusArchived && !form.enabled && (isStatementEditable | async) === true"
     applicationType="TIMETABLE_HEARING"
     [canton]="cantonShort"
     buttonDataCy="edit"
