ATLAS-1009: add update canton API

--- a/frontend/src/app/pages/tth/overview-detail/tth-change-status-dialog/tth-change-status-dialog.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/tth-change-status-dialog/tth-change-status-dialog.component.html
@@ -18,7 +18,7 @@
   </div>
   <div class="pt-2 pb-5 justification">
     <form-comment
-      [formGroup]="tthChangeStatusFormGroup"
+      [formGroup]="formGroup"
       controlName="justification"
       label="TTH.DIALOG.COMMENT_LABEL"
       maxChars="5000"
