--- a/frontend/src/app/pages/tth/overview-detail/tth-change-canton-dialog/tth-change-canton-dialog.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/tth-change-canton-dialog/tth-change-canton-dialog.component.html
@@ -1,6 +1,6 @@
 <app-base-change-dialog
   (changeEvent)="onClick()"
   [formGroup]="formGroup"
-  controlName="justification"
-  maxChars="5000"
+  controlName="comment"
+  maxChars="280"
 ></app-base-change-dialog>
