ATLAS-1009: code clean up

--- a/frontend/src/app/pages/tth/overview-detail/base-change-dialog/base-change-dialog.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/base-change-dialog/base-change-dialog.component.html
@@ -16,7 +16,7 @@
       data.message | translate : { tthsLength: data.tths.length }
     }}</span>
   </div>
-  <div class="pt-2 pb-5 justification">
+  <div class="pt-2 pb-5 comment">
     <form-comment
       [formGroup]="formGroup"
       controlName="{{ controlName }}"
