--- a/frontend/src/app/pages/tth/overview-detail/tth-change-canton-dialog/tth-change-canton-dialog.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/tth-change-canton-dialog/tth-change-canton-dialog.component.html
@@ -1,5 +1,6 @@
 <app-base-change-dialog
   (changeEvent)="onClick()"
+  [dialogRef]="dialogRef"
   [formGroup]="formGroup"
   controlName="comment"
   maxChars="280"
