--- a/frontend/src/app/pages/tth/overview-detail/tth-change-status-dialog/tth-change-status-dialog.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/tth-change-status-dialog/tth-change-status-dialog.component.html
@@ -1,5 +1,6 @@
 <app-base-change-dialog
   (changeEvent)="onClick()"
+  [dialogRef]="dialogRef"
   [formGroup]="formGroup"
   controlName="justification"
   maxChars="5000"
