ATLAS-1009: add permission logic for collecting action

--- a/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
@@ -165,6 +165,7 @@
         </div>
         <div
           *ngIf="
+            isCollectingActionEnabled &&
             isHearingYearActive &&
             !statusChangeCollectingActionsEnabled &&
             !cantonDeliveryCollectingActionsEnabled
