--- a/frontend/src/app/core/form-components/ttfn-select/timetable-field-number-select.component.html
+++ b/frontend/src/app/core/form-components/ttfn-select/timetable-field-number-select.component.html
@@ -3,6 +3,7 @@
   (searchTrigger)="searchTimetableFieldNumber($event)"
   [bindValueInp]="valueExtraction"
   [controlName]="controlName"
+  [disabled]="disabled"
   [formGroup]="formGroup"
   [items$]="timetableFieldNumbers"
 >
