--- a/frontend/src/app/core/components/table-filter/table-filter.component.scss
+++ b/frontend/src/app/core/components/table-filter/table-filter.component.scss
@@ -77,3 +77,12 @@
     padding-right: 1rem !important;
   }
 }
+
+.disabled {
+  outline: 1px solid variables.$gray-400;
+  pointer-events: none;
+
+  &:hover {
+    outline: 1px solid variables.$gray-400;
+  }
+}
