--- a/frontend/src/app/core/form-components/tu-select/transport-company-select.component.html
+++ b/frontend/src/app/core/form-components/tu-select/transport-company-select.component.html
@@ -3,6 +3,7 @@
   (searchTrigger)="searchTransportCompany($event)"
   [bindValueInp]="valueExtraction"
   [controlName]="controlName"
+  [disabled]="disabled"
   [formGroup]="formGroup"
   [items$]="transportCompanies"
   [multiple]="true"
