--- a/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
@@ -25,6 +25,7 @@
         <atlas-select
           (selectChanged)="changeSelectedCantonFromDropdown($event)"
           [additionalLabelspace]="false"
+          [disabled]="isCheckBoxModeActive"
           [options]="CANTON_DROPDOWN_OPTIONS"
           [value]="defaultDropdownCantonSelection"
           label="TTH.SELECT_CANTON"
@@ -49,13 +50,14 @@
         <atlas-button
           (buttonClicked)="downloadCsv()"
           [canton]="cantonShort"
+          [disabled]="isCheckBoxModeActive"
           applicationType="TIMETABLE_HEARING"
           buttonDataCy="download-csv"
           buttonText="TTH.BUTTON.DOWNLOAD_CSV"
           buttonType="cantonWritePermission"
         >
           <ng-template #rightIcon>
-            <download-icon class="ps-2"></download-icon>
+            <download-icon [readonly]="!isCheckBoxModeActive" class="ps-2"></download-icon>
           </ng-template>
         </atlas-button>
       </div>
@@ -66,6 +68,7 @@
         <atlas-spacer height="15px"></atlas-spacer>
         <atlas-button
           (buttonClicked)="manageTimetableHearing()"
+          [disabled]="isCheckBoxModeActive"
           applicationType="LIDI"
           buttonDataCy="manageTimetableHearing"
           buttonText="TTH.BUTTON.MANAGE_TIMETABLE_HEARING"
