--- a/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
@@ -21,7 +21,7 @@
         >
         </atlas-select>
       </div>
-      <div class="d-flex flex-column col-3 pe-3 pb-2 mb-2">
+      <div *ngIf="!noTimetableHearingYearFound" class="d-flex flex-column col-3 pe-3 pb-2 mb-2">
         <atlas-select
           (selectChanged)="changeSelectedCantonFromDropdown($event)"
           [additionalLabelspace]="false"
