ATLAS-1217: Button styling und sichtbarkeit

--- a/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
@@ -103,10 +103,11 @@
         <atlas-spacer height="15px"></atlas-spacer>
         <atlas-button
           (buttonClicked)="startTimetableHearing()"
-          applicationType="LIDI"
+          applicationType="TIMETABLE_HEARING"
           buttonDataCy="startTimetableHearing"
           buttonText="TTH.BUTTON.START_TIMETABLE_HEARING"
-          buttonType="createCheckingPermission"
+          buttonType="supervisorButton"
+          buttonStyleClass="atlas-raised-button mat-mdc-raised-button"
         >
         </atlas-button>
       </div>
