--- a/frontend/src/styles/am-components/_ng-select.scss
+++ b/frontend/src/styles/am-components/_ng-select.scss
@@ -38,3 +38,9 @@ $height: 32px;
     box-shadow: 0 0 0 1px variables.$warnColor;
   }
 }
+
+// Position of Dropdown
+.ng-dropdown-panel.ng-select-bottom {
+  top: unset;
+  margin-top: unset;
+}
