--- a/frontend/src/styles/am-components/_ng-select.scss
+++ b/frontend/src/styles/am-components/_ng-select.scss
@@ -12,6 +12,13 @@ $height: 32px;
   .ng-select-container {
     min-height: $height;
     border-radius: variables.$border-radius-small;
+
+    .ng-value-container {
+      overflow: hidden;
+      .ng-value {
+        width: 100%;
+      }
+    }
   }
 }
 
