Use Supervisor checks on hearing buttons

--- a/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
@@ -88,7 +88,7 @@
         <atlas-spacer height="15px"></atlas-spacer>
         <atlas-button
           (buttonClicked)="addNewStatement()"
-          applicationType="LIDI"
+          applicationType="TIMETABLE_HEARING"
           buttonDataCy="addNewStatement"
           buttonText="TTH.BUTTON.ADD_NEW_STATEMENT"
           buttonType="createCheckingPermission"
@@ -115,10 +115,10 @@
         <atlas-spacer height="15px"></atlas-spacer>
         <atlas-button
           (buttonClicked)="addNewTimetableHearing()"
-          applicationType="LIDI"
+          applicationType="TIMETABLE_HEARING"
           buttonDataCy="addNewTimetableHearing"
           buttonText="TTH.BUTTON.ADD_NEW_TIMETABLE_HEARING"
-          buttonType="createCheckingPermission"
+          buttonType="supervisorButton"
           wrapperStyleClass="text-align-end"
         >
         </atlas-button>
