ATLAS-1222: show ttfn description in select

--- a/frontend/src/app/core/form-components/ttfn-select/timetable-field-number-select.component.html
+++ b/frontend/src/app/core/form-components/ttfn-select/timetable-field-number-select.component.html
@@ -10,14 +10,16 @@
   <div class="d-flex flex-column">
     <mat-label class="font-bold-lg">{{ 'TTFN.TTFN' | translate }}</mat-label>
     <mat-label *ngIf="formModus" class="font-regular-sm">
-      {{ 'TTFN.SWISS_TIMETABLE_FIELD_NUMBER' | translate }} -
-      {{ 'TTFN.NUMBER' | translate }}
+      {{ 'TTFN.SWISS_TIMETABLE_FIELD_NUMBER' | translate }} - {{ 'TTFN.NUMBER' | translate }} -
+      {{ 'TTFN.DESCRIPTION' | translate }}
     </mat-label>
   </div>
   <div
     [ngClass]="formModus ? 'form-mode-label-form-field-space' : 'search-mode-space-between'"
   ></div>
   <ng-template #labelOptionTemplates let-item>
-    {{ item | ttfnSelectDisplay }}
+    <div class="text-truncate">
+      {{ item | ttfnSelectDisplay }}
+    </div>
   </ng-template>
 </form-search-select>
