--- a/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
@@ -207,7 +207,7 @@
         >
           <div class="d-flex flex-column col-6">
             <atlas-button
-              (buttonClicked)="cancelCollectiongAction()"
+              (buttonClicked)="cancelCollectingAction()"
               applicationType="LIDI"
               buttonDataCy="cancel-collecting-action"
               buttonText="TTH.BUTTON.CANCEL_COLLECTING_ACTION"
